# ucan

./: .editorconfig  .env.example  .gitignore  .pylintrc  LICENSE  README.md  alembic.ini  chat_history.json  mypy.ini  pyproject.toml  pytest.ini  ucan.db  user_settings.json
.cursor/: README.md
.cursor/rules/: architectural_decisions.mdc  change_workflow.mdc  component_registry.mdc  context_continuity.mdc  contextual_documentation.mdc  dependency_management.mdc  duplication_prevention.mdc  terminology.mdc  tools.mdc
conversations/: Nova Conversa _20_03_2025 00_55__20250320_005543.json
conversations/Nova Conversa (19/03/2025 23:08) (19/03/: 2025 23:08).json
examples/: chat_app.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py
resources/styles/: chat.css  conversation_list.qss  knowledge_panel.qss  main.css
scripts/: check_duplication.py  install.sh  run_and_screenshot.sh
tests/: __init__.py  conftest.py  test_app_controller.py  test_theme_manager.py
ucan/: __init__.py  __main__.py  ai_provider.py  api.py  attachments.py  chat.py  cli.py  components.py  compression.py  database.py  llm.py  main-2.py  main.py  projects.py  suggestions.py  theme.py  ui.py  widgets.py  windows.py
ucan/config/: __init__.py  constants.py  settings.py  theme_manager.py
ucan/controller/: __init__.py  app_controller.py
ucan/core/: __init__.py  app_controller.py  assistant.py  base.py  cache_manager.py  conversation.py  conversation_type.py  database.py  knowledge_base.py  knowledge_manager.py  llm_interface.py  message.py  models.py
ucan/models/: conversation.py  knowledge_base.py  message.py
ucan/ui/: __init__.py  chat_widget.py  components.py  conversation_list.py  conversation_list_widget.py  conversation_type_dialog.py  icons.py  knowledge_base_dialog.py  knowledge_base_item.py  knowledge_base_widget.py  knowledge_panel.py  knowledge_widget.py  main_window.py  message_widget.py  new_conversation_dialog.py  settings_dialog.py  styles.py  theme_manager.py
ucan/ui/dialogs/: theme_dialog.py
ucan/ui/styles/: chat.css  conversation_list.qss  knowledge.qss  knowledge_panel.qss  main.css
ucan/utils/: __init__.py  file_watcher.py  paths.py  resource_loader.py  utils.py
